--- a/index.html
+++ b/index.html
@@ -13,8 +13,35 @@
 </head>
 
 <body>
-    <div class="outline"></div>
-    <a-scene vr-mode-ui="enabled: false">
+    <div class="outline">
+        <h1>Birb Design Studio</h1>
+        <img class="design" src="./svg/Dalmation Dots.svg" alt="" role="presentation">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet aspernatur repudiandae, architecto autem dicta
+            iure nihil accusantium saepe neque pariatur ullam eum repellat ea molestiae debitis soluta porro non!
+            Consequatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis veniam repellendus odit
+            assumenda praesentium itaque enim, iure nemo molestiae amet provident saepe in necessitatibus adipisci
+            similique dolore alias ipsum eum sed! Impedit et expedita perferendis eveniet, non eius at fuga dolorem
+            rerum ea, laborum doloribus iste quia aliquam, assumenda blanditiis iure dolores labore quisquam aut quae
+            voluptas voluptate quos dicta? Placeat magnam reiciendis iste, expedita eius necessitatibus ad! Repellat
+            quibusdam voluptates consectetur praesentium. Autem dignissimos incidunt vel iusto quasi ea delectus totam
+            quaerat, nisi tempore quos et pariatur natus ipsam expedita amet fuga nostrum odio optio quia error dolore
+            magnam. Ab aut exercitationem quisquam recusandae ipsa repudiandae voluptatem, provident necessitatibus id
+            minus sit dolorem fuga explicabo nulla a ex vero beatae! Inventore blanditiis asperiores aut nesciunt neque
+            non quaerat eveniet perferendis reiciendis voluptate vitae natus perspiciatis nostrum, beatae tempora autem
+            animi. Tempora, soluta aspernatur quo saepe reprehenderit velit. Deleniti sed repudiandae soluta velit
+            incidunt, nisi corrupti quis et voluptates, dignissimos suscipit dolorum neque tenetur officia, repellendus
+            harum facere. Accusamus commodi error sint aspernatur voluptatum libero dignissimos tempore molestias fuga?
+            Quam hic molestias odio animi possimus rem expedita aliquid. Aperiam, debitis quibusdam, possimus obcaecati
+            cumque adipisci maxime officia culpa velit sint minima dolore, repudiandae delectus labore voluptate alias
+            at. Eveniet illum exercitationem quaerat in iure? Pariatur voluptates odio recusandae quia optio voluptatum!
+            Enim sint reiciendis provident laudantium eaque porro magnam voluptatibus voluptatem expedita, tenetur illum
+            maiores ipsum alias! Laborum porro aspernatur, aliquam quasi provident nam cupiditate maiores eaque rerum.
+            Dolorem, nobis voluptatum. Impedit blanditiis perferendis fugit fugiat odit beatae consectetur tenetur
+            reiciendis quam aperiam quasi, vitae explicabo accusantium! Nam doloremque optio, esse similique quibusdam
+            et nulla, ad neque deserunt quo aliquid sequi nisi amet pariatur. Ipsam impedit mollitia quasi atque ad
+            dicta, saepe fugiat libero odit voluptatum natus, molestiae provident adipisci.</p>
+    </div>
+    <a-scene vr-mode-ui="enabled: false" loading-screen="dotsColor: white; backgroundColor: black">
         <a-assets>
             <a-asset-item id="bird" src="./model/scene.gltf"></a-asset-item>
         </a-assets>
